# PTL-PINNs

./: LICENSE  README.md  pyproject.toml
ptlpinns/models/: load.py  model.py  train_PDE.py  training.py  transfer.py  transfer_kpp.py
ptlpinns/models/train/: __init__.py  kpp_fisher_nonlinear.ipynb  kpp_fisher_train.ipynb  kpp_fisher_train_colab.ipynb  overdamped.ipynb  overdamped_nonlinear.ipynb  undamped.ipynb  undamped_nonlinear.ipynb  underdamped.ipynb  underdamped_nonlinear.ipynb
ptlpinns/models/train/KPP_Fisher_linear/: model_KPP_Fisher_linear.pth
ptlpinns/models/train/config/: overdamped.yaml  (+15 more)
ptlpinns/odes/: equations.py  forcing.py  numerical.py
ptlpinns/perturbation/: LKV.py  LPM.py  standard.py
ptlpinns/results/: lotka_volterra.ipynb  lotka_volterra_numerical.ipynb  lpm_forcing.ipynb  overdamped.ipynb  polynomial.ipynb  regular_transfer copy.ipynb  regular_transfer.ipynb  time.ipynb  time_acc_vs_order.ipynb  undamped.ipynb  undamped_pol.ipynb  underdamped.ipynb
ptlpinns/results/LKV/: lotka_volterra.ipynb  lotka_volterra_numerical.ipynb  regular_transfer.ipynb  time.ipynb
ptlpinns/results/PDEs/: KPP_Fisher.ipynb  pde_numerical.ipynb  pde_time.ipynb  time.ipynb
ptlpinns/results/oscillator/: graphical_abstract.ipynb  klein_gordon.ipynb  numerical_oscillator.ipynb  overdamped copy.ipynb  overdamped.ipynb  regular_transfer.ipynb  time copy.ipynb  time.ipynb  time_acc_vs_order.ipynb  undamped copy.ipynb  undamped.ipynb  underdamped copy.ipynb  underdamped.ipynb  underdamped_pol.ipynb
torch_failed/: README.md  transfer_torch.py  undamped_torch.ipynb
(+25 files in other folders)
