[project]
name = "ptlpinns"
version = "1.0.0"
description = "Perturbation-Guided Transfer Learning with Physics-Informed Neural Networks for Nonlinear Systems"
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name="Duarte Alexandrino"},
]
keywords = ["pytorch", "neural-networks", "deep-learning", "perturbation", "pinns"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

dependencies = [
  "numpy>=1.24.2",
  "scipy>=1.10.1",
  "matplotlib>=3.7.1",
  "torch>=2.0.0",                  
  "neurodiffeq>=0.5.3",            
  "typing-extensions>=4.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ptlpinns/*"]